--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "firebase": "^8.2.3",
+    "three": "^0.131.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
