--- a/firebase.json
+++ b/firebase.json
@@ -20,7 +20,7 @@
         "function": "additems"
       },
       {
-        "source": "/api/update",
+        "source": "/api/products/batch",
         "function": "update"
       },
       {
